@@ -313,6 +313,9 @@ class hiscores():
             position = load_split_add(self, new_entry).index(new_entry)
         except ValueError:
             position = None
+            self.diplay_caption = "You didn't make it to the top {}".format(
+                self.n_entries
+            )
         if position is not None:
             if self.use_nick:
                 title = 'You made it to #{0}'.format(position + 1)
@@ -334,21 +337,18 @@ class hiscores():
                 # Load the list again (inputfunction may take a very long time)
                 # and add the nickname to the entry.
                 sublist = load_split_add(self, new_entry)
-                # Position message.
-                if new_entry in sublist:
-                    position = sublist.index(new_entry)
-                    self.display_caption = 'You made it to #{0}'.format(
-                        position + 1
-                    )
-                else:
-                    self.display_caption = (
-                        "You didn't make it to the top {0}".format(
-                            self.n_entries
-                        )
-                    )
                 # Write back
                 self.hiscores.extend(sublist)
                 self._store()
+            # Position message.
+            if new_entry in sublist:
+                position = sublist.index(new_entry)
+                self.display_caption = 'You made it to #{0}'.format(
+                    position + 1
+                )
+            else:
+                # Race condition
+                self.display_caption = "Nearly made it!"
         if self.paramstring.startswith('lost/'):
             self.display_caption = "Losers' highscores"
     
