@@ -2,6 +2,8 @@
     0.3.4
         * cursescfg: Use reverse video for the flags to make them more
             distinguishable on monochrome terminals.
+        * anonymine_engine.py (hiscores (add_entry)): Failed to set
+            display_caption when the player didn't make it to highscores.
 
 2016-09-07      Oskar Skog      <oskar.skog.finland@gmail.com>
     0.3.3
